k8/indexify-server.yml
apiVersion: v1
kind: Service
metadata:
  namespace: indexify
  name: indexify-service
spec:
  ports:
    - port: 8900
      targetPort: 8900
      protocol: TCP
  type: NodePort
  selector:
    app: indexify
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: indexify
  name: indexify-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexify
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: indexify
    spec:
      containers:
        - name: indexify
          command: ["./indexify"]
          args:
            - server
            - --config-path
            - ./config/indexify.yaml
          image: tensorlake/indexify
          volumeMounts:
            - mountPath: /indexify/config
              name: config
              readOnly: true
          ports:
            - containerPort: 8900
      nodeSelector:
        node_role: indexify
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: indexify-configmap
            items:
              - key: "sample_config.yaml"
                path: "indexify.yaml"
